# VoxelForge

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  TODO  lines.sh
inc/glad/: glad.h
inc/vforge/: chunk.hpp  internal.hpp  object.hpp  vforge.hpp  vox_file.hpp  voxel.hpp  world.hpp  worldobject.hpp  xraw_file.hpp
inc/vforge/gl/: base.hpp  render.hpp  window.hpp
inc/vox_file/: vox_file.h
inc/voxelforge/: error.hpp  types.hpp  util.hpp  voxelforge.hpp
models/: Ak74.vox  tiger1.vox
shaders/: voxel-raytracing.glsl  voxel-world-raytrace.fsh  voxel-world-raytrace.vsh
src/: chunk.cpp  glad.c  util.cpp  world.cpp
src/vf/: base.cpp  window.cpp
src/vforge/: files.cpp  object.cpp  world.cpp
test/: main.cpp  test_fglw.cpp  test_voxel_load.cpp  test_voxel_raytrace.cpp  window_test.cpp
tests/: CMakeLists.txt  test_setup.cpp
